--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>s3crypto</name>
+	<name>java-s3crypto</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
