--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
 	<groupId>dp</groupId>
 	<artifactId>s3crypto</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
